# evesso

./: .gitignore  LICENSE  README.md  dist.bat  requirements.txt  setup.cfg
evesso/: __init__.py  app.py  auth.py  authorize.py  cache.py  config.py  const.py  esi.py  fileio.py  files.py  refresh.py  server.py  sso.py
evesso/callback/: __init__.py  index.html  server.py
tests/: test_authorize.py  test_cache.py  test_sso.py
