[metadata]
name = evesso
version = 0.1.2
author = MobiusXS
description = Python SSO Authorization for Eve Online API applications
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mobiusxs/evesso
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    requests

[options.package_data]
* = callback/index.html
